--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -1,10 +1,5 @@
-{{#compare (length @root.data.tasksInfo) 0 ~}}
-{{> log_empty}}
-{{else}}
 <div class="container achievements">
-  {{!-- <h1>
-    My achievements
-  </h1> --}}
+  {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
   <ul class="step">
     {{#each @root.context.metaData.certificates ~}}
     <li class="step-item{{#compare @root.data.verifyHoursInfo.award hours}} active{{/compare}}">
@@ -12,6 +7,7 @@
     </li>
     {{/each ~}}
   </ul>
+  {{/compare ~}}
   {{#each @root.context.metaData.certificates ~}}
   {{!-- It's already awarded --}}
   {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
@@ -97,4 +93,3 @@
   {{/compare ~}}
   {{/each ~}}
 </div>
-{{/compare ~}}
