--- a/configuration/templates/error/500.hbs
+++ b/configuration/templates/error/500.hbs
@@ -9,18 +9,20 @@
     <a href="mailto:{{> support_email_address}}" class="btn btn-link">Contact us</a>
   </div>
   <pre>
-    {{#each errors}}
+    {{#each errors ~}}
     --------------------------------
-    {{#if name}}Name: {{name}}{{/if}}
-    {{#if message}}Message: {{message}}{{/if}}
-    {{#if stack}}Stack: {{stack}}{{/if}}
-    {{#if sourceRoute.route.name}}Source route: {{sourceRoute.route.name}}{{/if}}
-    {{#if redirectTo}}Redirect To: {{redirectTo}}{{/if}}
-    {{#if statusCode}}Status code: {{statusCode}}{{/if}}
-    {{#if data}}Data: {{{stringify data}}}{{/if}}
-    {{#if task}}Task: {{{stringify task}}}{{/if}}
-    {{#if destination}}Destination: {{{stringify destination}}}{{/if}}
+    {{#if name}}Name: {{name}}{{/if~}}
+    {{#if message}}Message: {{message}}{{/if~}}
+    {{#if stack}}Stack: {{stack}}{{/if~}}
+    {{#if sourceRoute.route.name}}Source route: {{sourceRoute.route.name}}{{/if~}}
+    {{#if routeName}}Route name: {{routeName}}{{/if~}}
+    {{#if taskName}}Task name: {{taskName}}{{/if~}}
+    {{#if redirectTo}}Redirect To: {{redirectTo}}{{/if~}}
+    {{#if statusCode}}Status code: {{statusCode}}{{/if~}}
+    {{#if data}}Data: {{{stringify data}}}{{/if~}}
+    {{#if task}}Task: {{{stringify task}}}{{/if~}}
+    {{#if destination}}Destination: {{{stringify destination}}}{{/if~}}
     --------------------------------
-    {{/each}}
+    {{/each ~}}
   </pre>
 </div>
