--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -15,7 +15,7 @@
   <div class="columns">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       <h2 class="text-center">
-        {{#if last}}My{{else}}Current{{/if}} achievement
+        {{#if @last}}My{{else}}Current{{/if}} achievement
       </h2>
       <p class="text-center text-primary">
         <strong>{{type_name}}: {{certificate_name}} hours</strong>
