--- a/configuration/partials/log-hours-info.hbs
+++ b/configuration/partials/log-hours-info.hbs
@@ -6,6 +6,7 @@
   You have logged {{inflect (sumArray (pluck @root.data.tasksInfo "hours")) "hour" "hours" true}} so far
   {{/compare ~}}
 </p>
+
 {{#unless (compare (sumArray (pluck @root.data.tasksInfo "hours")) 0) ~}}
 <p class="empty-subtitle achievements text-centre">
   {{#each @root.context.metaData.certificates ~}}
@@ -17,4 +18,9 @@
   {{/each ~}}
 </p>
 {{/unless ~}}
+
+{{#if (compare (dateMath 'now-25y') ">" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD")) ~}}
+  <span class="working-towards over-age">As you are now over 25 years old, you may now only log past hours. Please add a note giving the date of these hours</span>
+{{/if}}
+
 {{/unless ~}}
