--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -194,7 +194,7 @@
       element.oninvalid = function(e) {
         e.target.setCustomValidity("");
         if (!e.target.validity.valid) {
-          e.target.setCustomValidity("This must be a valid email, and not your own");
+          e.target.setCustomValidity("This must be a valid email, but not your own");
         }
       };
       element.oninput = function(e) {
