--- a/configuration/templates/account/auth/sign-up-details.hbs
+++ b/configuration/templates/account/auth/sign-up-details.hbs
@@ -9,7 +9,7 @@
     {{/unless ~}}
   </h3>
 
-  <form id="user-details-form" action="/submit-sign-up-details" method="POST">
+  <form id="user-details-form" action="/submit-sign-up-details" method="POST" autocomplete="nope">
     {{> account_details_form_fields admin=data.adminCandidate}}
 
     <input type="hidden" name="signup" value="true">
