--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -19,7 +19,7 @@
     <input type="hidden" name="sort" value="{{@root.request.params.query.sort}}" id="default-sort" />
     <div class="b-padding">
       <div class="columns">
-        <div class="column col-8">
+        <div class="column col-7 col-xl-6 col-md-12 keywords">
           <div class="form-group full-width">
             <div data-component="Typeahead" data-Typeahead="typeahead-terms">
               <input type="text" id="what-opportunities" name="keywords" class="form-input input-lg" value="{{@root.request.params.query.keywords}}"
@@ -27,8 +27,7 @@
             </div>
           </div>
         </div>
-
-        <div class="column col-4 filter-age">
+        <div class="column col-3 col-xl-4 col-md-8 filter-age">
           <div class="form-group">
             <select class="form-select select-lg" id="age" name="age">
               {{#each (split "12,13,14,15,16,17,18" ",")}}
@@ -37,10 +36,26 @@
             </select>
           </div>
         </div>
+        <div class="column col-ml-auto col-2 col-md-4">
+          <button type="submit" id="search-opportunities" class="btn btn-primary btn-lg">
+            Search
+            <!-- <span class="far fa-search" aria-hidden="true"></span> -->
+          </button>
+        </div>
       </div>
-
-      <div class="columns">
-        <div class="column col-8">
+      <div class="columns t-margin-full">
+        <div class="column col-3 {{#unless hasLocation}}hidden{{/unless}}" id="location-fields">
+          <div class="input-group has-icon-left t-margin-full">
+            <span class="form-icon far fa-times geo-lookup" tabindex="0" title="Find my location" data-component="TasksTrigger" data-TasksTrigger="empty-location-fields"></span>
+            <input type="text" id="where-opportunities" name="location" class="form-input input-lg" value="{{location}}" placeholder="Location" data-lpignore="true" readonly>
+            <select class="form-select select-lg" id="distance" name="distance">
+              {{#each (split "5,10,15,20,25,30,35,40,45,50" ",")}}
+                <option value="{{this}}" {{#compare (default @root.request.params.query.distance "10") "===" this}}selected{{/compare}}>{{this}} miles</option>
+              {{/each}}
+            </select>
+          </div>
+        </div>
+        <div class="column col-9 chips">
           {{#each @root.context.metaData.volunteeringTerms}}
             <div class="chip-set chip-filters" id="{{key}}-filters">
               {{~#each (arrayify (getProperty @root.request.params.query key))~}}
@@ -64,27 +79,6 @@
               {{~/each~}}
             </div>
           {{/each}}
-        </div>
-
-        <div class="column col-4 {{#unless hasLocation}}hidden{{/unless}}" id="location-fields">
-          <div class="input-group has-icon-left t-margin-full">
-            <span class="form-icon far fa-times geo-lookup" tabindex="0" title="Find my location" data-component="TasksTrigger" data-TasksTrigger="empty-location-fields"></span>
-            <input type="text" id="where-opportunities" name="location" class="form-input input-lg" value="{{location}}" placeholder="Location" data-lpignore="true" readonly>
-            <select class="form-select select-lg" id="distance" name="distance">
-              {{#each (split "5,10,15,20,25,30,35,40,45,50" ",")}}
-                <option value="{{this}}" {{#compare (default @root.request.params.query.distance "10") "===" this}}selected{{/compare}}>{{this}} miles</option>
-              {{/each}}
-            </select>
-          </div>
-        </div>
-      </div>
-
-      <div class="columns t-margin-full">
-        <div class="column col-ml-auto col-2">
-          <button type="submit" id="search-opportunities" class="btn btn-primary btn-lg">
-            Search
-            <!-- <span class="far fa-search" aria-hidden="true"></span> -->
-          </button>
         </div>
       </div>
     </div>
