no doubt conflicts inc

--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -23,7 +23,7 @@
           <div class="form-group full-width">
             <div data-component="Typeahead" data-Typeahead="typeahead-terms">
               <input type="text" id="what-opportunities" name="keywords" class="form-input input-lg" value="{{@root.request.params.query.keywords}}"
-                placeholder="Keywords" autocomplete="off" data-lpignore="true">
+                placeholder="Keywords" autocomplete="nope" data-lpignore="true">
             </div>
           </div>
         </div>
