--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -38,13 +38,13 @@
 
           <div class="form-group has-icon-left">
             <!-- <label class="form-label" for="change-password-password">New password</label> -->
-            <input class="form-input" type="password" id="change-password-password" placeholder="New password" data-lpignore="true" autocomplete="off"
+            <input class="form-input" type="password" id="change-password-password" placeholder="New password" data-lpignore="true" autocomplete="nope"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
             <span class="form-icon far fa-key"></span>
           </div>
           <div class="form-group has-icon-left">
             <!-- <label class="form-label" for="change-password-confirm">New password (confirm)</label> -->
-            <input class="form-input" type="password" id="change-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="off"
+            <input class="form-input" type="password" id="change-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="nope"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
             <span class="form-icon far fa-key"></span>
           </div>
@@ -69,12 +69,12 @@
           </div>
 
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-email" placeholder="New email" data-lpignore="true" autocomplete="off"
+            <input class="form-input" type="email" id="change-email-email" placeholder="New email" data-lpignore="true" autocomplete="nope"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
             <span class="form-icon far fa-at"></span>
           </div>
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="off"
+            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
             <span class="form-icon far fa-at"></span>
           </div>
