--- a/configuration/templates/page/test.hbs
+++ b/configuration/templates/page/test.hbs
@@ -9,10 +9,10 @@
   </div>
   <div class="x-padding">
     <div class="form-group has-icon-left">
-      <input class="form-input" type="email" id="cat-name" placeholder="Cat Name" data-lpignore="true" autocomplete="off" />
+      <input class="form-input" type="email" id="cat-name" placeholder="Cat Name" data-lpignore="true" autocomplete="nope" />
     </div>
     <div class="form-group has-icon-left">
-      <input class="form-input" type="password" id="dog-name" placeholder="Dog Name" data-lpignore="true" autocomplete="off" />
+      <input class="form-input" type="password" id="dog-name" placeholder="Dog Name" data-lpignore="true" autocomplete="nope" />
     </div>
     <div id="form-section-sign-up-buttons" class="t-margin">
       <button class="btn btn-primary" type="submit" id="sign-up-submit">
