--- a/configuration/templates/account/auth/sign-up-admin.hbs
+++ b/configuration/templates/account/auth/sign-up-admin.hbs
@@ -14,15 +14,15 @@
         <span class="form-icon far fa-at"></span>
       </div>
       <div class="form-group has-icon-left">
-        <input class="form-input" type="email" id="sign-up-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="off" required />
+        <input class="form-input" type="email" id="sign-up-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope" required />
         <span class="form-icon far fa-at"></span>
       </div>
       <div class="form-group has-icon-left">
-        <input class="form-input" type="password" id="sign-up-password" placeholder="Password" data-lpignore="true" autocomplete="off" required />
+        <input class="form-input" type="password" id="sign-up-password" placeholder="Password" data-lpignore="true" autocomplete="nope" required />
         <span class="form-icon far fa-key"></span>
       </div>
       <div class="form-group has-icon-left">
-        <input class="form-input" type="password" id="sign-up-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="off" required />
+        <input class="form-input" type="password" id="sign-up-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="nope" required />
         <span class="form-icon far fa-key"></span>
       </div>
     </div>
