--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -50,7 +50,7 @@
             <div class="column col-3 col-md-4 col-sm-5 col-xs-6">
               <div class="input-group">
                 {{!-- <span class="input-group-addon">SC</span> --}}
-                <input autocomplete="off" id="organisation_charity_number" placeholder="e.g. SC003558" name="organisation_charity_number" class="form-input" value="{{@root.data.taskInfo.organisation_charity_number}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.organisation_charity_number}}>
+                <input autocomplete="nope" id="organisation_charity_number" placeholder="e.g. SC003558" name="organisation_charity_number" class="form-input" value="{{@root.data.taskInfo.organisation_charity_number}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.organisation_charity_number}}>
               </div>
             </div>
           </div>
