--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -22,8 +22,7 @@
         <div class="column col-7 col-xl-6 col-md-12 keywords">
           <div class="form-group full-width">
             <div data-component="Typeahead" data-Typeahead="typeahead-terms">
-              <input type="text" id="what-opportunities" name="keywords" class="form-input input-lg" value="{{@root.request.params.query.keywords}}"
-                placeholder="Keywords" autocomplete="off" data-lpignore="true">
+              <input type="text" id="what-opportunities" name="keywords" class="form-input input-lg" value="{{@root.request.params.query.keywords}}" placeholder="Search for volunteering opportunities" autocomplete="off" data-lpignore="true">
             </div>
           </div>
         </div>
@@ -44,8 +43,8 @@
         </div>
       </div>
       <div class="columns t-margin-full">
-        <div class="column col-3 {{#unless hasLocation}}hidden{{/unless}}" id="location-fields">
-          <div class="input-group has-icon-left t-margin-full">
+        <div class="column col-5 {{#unless hasLocation}}hidden{{/unless}}" id="location-fields">
+          <div class="input-group has-icon-left">
             <span class="form-icon far fa-times geo-lookup" tabindex="0" title="Find my location" data-component="TasksTrigger" data-TasksTrigger="empty-location-fields"></span>
             <input type="text" id="where-opportunities" name="location" class="form-input input-lg" value="{{location}}" placeholder="Location" data-lpignore="true" readonly>
             <select class="form-select select-lg" id="distance" name="distance">
@@ -325,7 +324,7 @@
         queryTokenizer: "whitespace",
         local: [
           {
-            label: "Use my device's location",
+            label: "Use my current location",
             value: "near-me",
             other: "local near me here"
           }
