added 50 hours ascent certificate

--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge type='approach' key='twenty-five' hours='25'}}
+      {{> badge type='approach' key='ten' hours='10'}}
       <h4 class="t-margin-full">
         The Approach
       </h4>
@@ -55,12 +55,12 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge type='ascent' key='one-hundred' hours='100'}}
+      {{> badge type='ascent' key='fifty' hours='50'}}
       <h4 class="t-margin-full">
         The Ascent
       </h4>
       <p>
-        For when you've reached 100, 200 or even 500 hours
+        For when you've reached 50, 100, 200 or even 500 hours
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
