--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -162,7 +162,7 @@
               <select class="form-select" id="un_sustainable_development_goals" name="un_sustainable_development_goals">
                 <option value="" selected></option>
                 {{#each @root.context.metaData.globalGoals ~}}
-                <option value="{{title}}">{{@key}}: {{title}}</option>
+                <option value="{{title}}">{{add @key 1}}: {{title}}</option>
                 {{/each ~}}
               </select>
             </div>
